Add instructions in the CSS code.

--- a/SampleProject/SampleSolution/Website/Steps/AddCss.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddCss.html
@@ -1,5 +1,6 @@
 ﻿<!-- Overview: Adding CSS,
-    For more info see:https://www.w3schools.com/html/html_css.asp
+    For more info see:
+        https://www.w3schools.com/html/html_css.asp
     -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
