Add instructions in the section Javascript code.

--- a/SampleProject/SampleSolution/Website/Steps/AddJavascript.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddJavascript.html
@@ -1,4 +1,8 @@
-﻿<!-- Overview: Adding Javascript, JSON -->
+﻿<!-- Overview: Adding Javascript, JSON
+    For more info see:
+        http://blog.scottlowe.org/2013/11/08/a-non-programmers-introduction-to-json/
+        https://www.digitalocean.com/community/tutorials/an-introduction-to-json
+    -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
