--- a/SampleProject/SampleSolution/Website/Steps/UseLOC.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseLOC.html
@@ -1,15 +1,20 @@
-﻿
+﻿<!-- Overview: Calling an existing endpoint.  In this case, the Libary of Congress website.
+    For more info see:
+        https://www.w3schools.com/html/html_css.asp
+    -->
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
+    <!-- Step:  Add a title, in this case, call it "Library of Congress" -->
     <title>Library of Congress</title>
 </head>
 <body>
-    <!-- TODO:  Add  -->
-    <h2>Library of Congress - Image Search</h2>
 
+    <!-- Step:  Give the input box a default value of "Migrant Mother. Dorothea Lange" -->
     <input id="searchText" type="text" size="100" value="Migrant Mother. Dorothea Lange" />
     <br />(Also Try "Detroit Campus Martius")
+    <!-- Step: tie into the onclick event, and call the function "loadRemoteLOC" -->
     <br /><button onclick="loadRemoteLOC()">Search Remote</button>
 
     <table border="1" id="resultsTable">
@@ -38,10 +43,17 @@
                 addRowToTable(item);
             }
         }
+        /* Step: Call the loadRemoteLOC function (in order to initialize when the page loads)  */
         loadRemoteLOC();
 
+        /* Step: Define the loadRemoteLOC function that will pass the search information to an ajax call.  Upon returning, the loadData will be called with the returned data. */
         function loadRemoteLOC() {
+            /*  Step: Using JQuery get the value in the search box */
             var search = $("#searchText").val();
+            /*  Step: Using JQuery ajax, call the url 'http://www.loc.gov/pictures/search/' */
+            /*  Step: Pass the following in the data element:
+                 { fo: 'json', at: 'results', query: search }
+            */
             $.ajax({
                 type: 'get',
                 url: 'http://www.loc.gov/pictures/search/',
@@ -51,6 +63,7 @@
                     at: 'results',
                     query: search
                 },
+                /*  Step: add a 'success function that gets passed in the response data, then calls loadData with the value */
                 success: function (response) {
                     loadData(response);
                 },
