Update Default.html to show the controllers used.

--- a/SampleProject/SampleSolution/Website/Default.html
+++ b/SampleProject/SampleSolution/Website/Default.html
@@ -9,10 +9,10 @@
     <br /><a target='_blank' href='Steps/AddCss.html'>Add CSS</a>
     <br /><a target='_blank' href='Steps/AddJavascript.html'>Add Javascript</a>
     <br /><a target='_blank' href='Steps/AddJQuery.html'>Add JQuery</a>
-    <br /><a target='_blank' href='Steps/UseLOC.html'>Use Library Of Congress Endpoint</a>
-    <br /><a target='_blank' href='Steps/UseSimpleEndpoint.html'>Create and use a custom simple Endpoint</a>
-    <br /><a target='_blank' href='Steps/UseCustomDatabase.html'>Tie custom endpoint to database </a>
-    <br /><a target='_blank' href='Steps/UseEntityEndpoint.html'>Use Entity Framework</a>
-    <br /><a target='_blank' href='Steps/UseAdventureWorksDatabase.html'>Use AdventureWorks Database</a>
+    <br /><a target='_blank' href='Steps/UseLOC.html'>Use Library Of Congress Endpoint (LOC api)</a>
+    <br /><a target='_blank' href='Steps/UseSimpleEndpoint.html'>Create and use a custom simple Endpoint (LOCController.cs)</a>
+    <br /><a target='_blank' href='Steps/UseCustomDatabase.html'>Tie custom endpoint to database  (LOCDBController.cs)</a>
+    <br /><a target='_blank' href='Steps/UseEntityEndpoint.html'>Use Entity Framework (LOCEntityController.cs)</a>
+    <br /><a target='_blank' href='Steps/UseAdventureWorksDatabase.html'>Use AdventureWorks Database (AWEntityController.cs)</a>
 </body>
 </html>
