Add instructions in the section Simple api call.

--- a/SampleProject/SampleSolution/Website/Steps/UseLOC.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseLOC.html
@@ -63,7 +63,7 @@
                     at: 'results',
                     query: search
                 },
-                /*  Step: add a 'success function that gets passed in the response data, then calls loadData with the value */
+                /*  Step: add a 'success' function that gets passed in the response data, then calls loadData with the value */
                 success: function (response) {
                     loadData(response);
                 },
