Add steps for the model objects.

--- a/SampleProject/SampleSolution/Website/Steps/UseLOC.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseLOC.html
@@ -54,6 +54,7 @@
             /*  Step: Pass the following in the data element:
                  { fo: 'json', at: 'results', query: search }
             */
+            /* Step: in order for this to work, you will need to update the controller file: LOCController.cs */
             $.ajax({
                 type: 'get',
                 url: 'http://www.loc.gov/pictures/search/',
