--- a/SampleProject/SampleSolution/Website/Steps/UseCustomDatabase.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseCustomDatabase.html
@@ -1,14 +1,17 @@
-﻿
+﻿<!-- Overview:  Calling a custom endpoint we create, that returns data from the database, using ADO.Net.
+    -->
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-    <title>Library of Congress</title>
+    <!-- Step:  Add a title, in this case, call it "Database Endpoint" -->
+    <title>Database Endpoint</title>
 </head>
 <body>
-    <!-- TODO:  Add  -->
-    <h2>Library of Congress - Image Search</h2>
 
+    <!-- Step: Default value = "lam" -->
     <input id="searchText" type="text" size="100" value="lam" />
+    <!-- Step: tie into the onclick event, and call the function "loadDatabaseData" -->
     <br /><button onclick="loadDatabaseData()">Search Database</button>
 
     <table border="1" id="resultsTable">
@@ -36,11 +39,12 @@
                 addRowToTable(item);
             }
         }
+        /* Step: Call the loadDatabaseData function (in order to initialize when the page loads)  */
         loadDatabaseData();
 
         function loadDatabaseData() {
-            // alert('click' + $("#searchText").val())
             var search = $("#searchText").val();
+            /*  Step: Using JQuery ajax, call the url  'http://localhost:29594/api/locdb/' */
             $.ajax({
                 type: 'get',
                 url: 'http://localhost:29594/api/locdb/',
