--- a/SampleProject/SampleSolution/Website/Steps/UseEntityEndpoint.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseEntityEndpoint.html
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-    <title>Library of Congress</title>
+    <!-- Step:  Add a title, in this case, call it "Uses Entity" -->
+    <title>Uses Entity</title>
 </head>
 <body>
 
