--- a/SampleProject/SampleSolution/Website/Steps/UseAdventureWorksDatabase.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseAdventureWorksDatabase.html
@@ -39,7 +39,7 @@
                 addRowToTable(item);
             }
         }
-        /* Step: Call the loadAWDatabaseUsingEntity function (in order to initialize when the page loads)  */
+        // Step: Call the loadAWDatabaseUsingEntity function (in order to initialize when the page loads)
         loadAWDatabaseUsingEntity();
 
         function loadAWDatabaseUsingEntity() {
