--- a/SampleProject/SampleSolution/Website/Steps/AddJavascript.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddJavascript.html
@@ -81,15 +81,15 @@
         };
     </script>
     <script>
-        /* Step:  Call an alert function, and pass it "Hello World!". */
+        // Step:  Call an alert function, and pass it "Hello World!".
         alert("Hello World!");
-        /* Step: Display the count of the results subobject. */
+        // Step: Display the count of the results subobject.
         alert("JSON Object Count = " + sampleData.results.length);
 
-        /* Step: Display the title of the 2nd items title (index is 1). */
+        // Step: Display the title of the 2nd items title (index is 1).
         alert("JSON first object info = " + sampleData.results[1].title);
 
-        /* Step: Using JSON.stringify(OBJECT, null, "  "), dump out the  3rd JSON object . */
+        // Step: Using JSON.stringify(OBJECT, null, "  "), dump out the  3rd JSON object . 
         alert("full Object" + JSON.stringify(sampleData.results[2], null, "  "));
     </script>
 
