--- a/SampleProject/SampleSolution/Website/Steps/UseEntityEndpoint.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseEntityEndpoint.html
@@ -39,7 +39,7 @@
                 addRowToTable(item);
             }
         }
-        /* Step: Call the loadDatabaseUsingEntity function (in order to initialize when the page loads)  */
+        // Step: Call the loadDatabaseUsingEntity function (in order to initialize when the page loads)  */
         loadDatabaseUsingEntity();
 
         function loadDatabaseUsingEntity() {
