--- a/SampleProject/SampleSolution/Website/Steps/UseSimpleEndpoint.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseSimpleEndpoint.html
@@ -38,10 +38,10 @@
                 addRowToTable(item);
             }
         }
-        /* Step: Call the loadSimpleEndpoint function (in order to initialize when the page loads)  */
+        // Step: Call the loadSimpleEndpoint function (in order to initialize when the page loads)
         loadSimpleEndpoint();
 
-        /* Step: Define the loadSimpleEndpoint function that will pass the search information to an ajax call.  Upon returning, the loadData will be called with the returned data. */
+        // Step: Define the loadSimpleEndpoint function that will pass the search information to an ajax call.  Upon returning, the loadData will be called with the returned data.
         function loadSimpleEndpoint() {
             var search = $("#searchText").val();
             /*  Step: Using JQuery ajax, call the url  'http://localhost:29594/api/loc/' */
