Added steps to Student Sample project and removed underlying code.

--- a/StudentSampleProject/StudentSampleSolution/Website/Steps/AddHtmlElements.html
+++ b/StudentSampleProject/StudentSampleSolution/Website/Steps/AddHtmlElements.html
@@ -3,31 +3,19 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!-- Step:  Add a title, in this case, call it "Adding HTML" -->
-    <title>Adding HTML</title>
+    <!-- Step 1.10:  Add a title, in this case, call it "Adding HTML" -->
+    <!-- Student: Insert Code Here -->
 </head>
 <body>
-    <!-- Step:  Add a text area, give it the id of "searchText" -->
-    <input id="searchText" type="text" width="900" value="" />
+    <!-- Step 1.20:  Add a text area, give it the id of "searchText" -->
+    <!-- Student: Insert Code Here -->
 
-    <!-- Step:  Add a table, with table headers of "date", "title", "thumb" -->
+    <!-- Step 1.30:  Add a table, with table headers of "date", "title", "thumb" -->
     <table border="1" id="resultsTable">
-        <tr>
-            <th>date</th>
-            <th>title</th>
-            <th>thumb</th>
-        </tr>
-        <!-- Step:  Add a sample data to the table -->
-        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-        </tr>
+        <!-- Add table headers of "date", "title", "thumb" -->
+        <!-- Student: Insert Code Here -->
+            <!-- Step 1.40:  Add sample data to the table -->
+            <!-- Student: Insert Code Here -->
     </table>
 </body>
 </html>
