--- a/StudentSampleProject/StudentSampleSolution/Website/Steps/AddJavascript.html
+++ b/StudentSampleProject/StudentSampleSolution/Website/Steps/AddJavascript.html
@@ -6,8 +6,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!-- Step:  Add a title, in this case, call it "Adding Javascript" -->
-    <title>Adding Javascript</title>
+    <!-- Step 3.10:  Add a title, in this case, call it "Adding Javascript" -->
+    <!-- Student: Insert Code Here -->
 </head>
 <body>
 
@@ -81,16 +81,18 @@
         };
     </script>
     <script>
-        // Step:  Call an alert function, and pass it "Hello World!".
-        alert("Hello World!");
-        // Step: Display the count of the results subobject.
-        alert("JSON Object Count = " + sampleData.results.length);
+        // Step 3.10:  Call an alert function, and pass it "Hello World!".
+        // Student: Insert Code Here
 
-        // Step: Display the title of the 2nd items title (index is 1).
-        alert("JSON first object info = " + sampleData.results[1].title);
+        // Step 3.20: Display the count of the results subobject of sampleData.
+        // Student: Insert Code Here
 
-        // Step: Using JSON.stringify(OBJECT, null, "  "), dump out the  3rd JSON object . 
-        alert("full Object" + JSON.stringify(sampleData.results[2], null, "  "));
+        // Step 3.30: Display the title of the 2nd items title (index is 1) of sampleData.
+        // Student: Insert Code Here
+
+        // Step 3.40: Using JSON.stringify(OBJECT, null, "  "), dump out the  3rd JSON object of sampleData.
+        // Student: Insert Code Here
+
     </script>
 
 </body>
