--- a/StudentSampleProject/StudentSampleSolution/Website/Steps/UseCustomDatabase.html
+++ b/StudentSampleProject/StudentSampleSolution/Website/Steps/UseCustomDatabase.html
@@ -4,15 +4,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-    <!-- Step:  Add a title, in this case, call it "Database Endpoint" -->
-    <title>Database Endpoint</title>
+    <!-- Step 7.10:  Add a title, in this case, call it "Database Endpoint" -->
+    <!-- Student: Insert Code Here -->
 </head>
 <body>
 
-    <!-- Step: Default value = "lam" -->
-    <input id="searchText" type="text" size="100" value="lam" />
-    <!-- Step: tie into the onclick event, and call the function "loadDatabaseData" -->
-    <br /><button onclick="loadDatabaseData()">Search Database</button>
+    <!-- Step 7.20: Default value = "lam" -->
+    <!-- Student: Insert Code Here -->
+    <!-- Step 7.30: tie into the onclick event, and call the function "loadDatabaseData" -->
+    <!-- Student: Insert Code Here -->
 
     <table border="1" id="resultsTable">
         <tr>
@@ -39,29 +39,8 @@
                 addRowToTable(item);
             }
         }
-        // Step: Call the loadDatabaseData function (in order to initialize when the page loads)
-        loadDatabaseData();
-
-        function loadDatabaseData() {
-            var search = $("#searchText").val();
-            /*  Step: Using JQuery ajax, call the url  'http://localhost:29594/api/locdb/'
-            $.ajax({
-                type: 'get',
-                url: 'http://localhost:29594/api/locdb/',
-                dataType: 'json',
-                data: {
-                    fo: 'json',
-                    at: 'results',
-                    query: search
-                },
-                success: function (response) {
-                    loadData(response);
-                },
-                error: function (errorObject) {
-                    alert("error: " + errorObject.responseText)
-                }
-            })
-        }
+        // Step 7.40: Implement & Call the loadDatabaseData function (in order to initialize when the page loads)
+        // Student: Insert Code Here -- >
     </script>
 </body>
 </html>
