Updated Master Sample Code with Step Numbers.

--- a/SampleProject/SampleSolution/Website/Steps/AddCss.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddCss.html
@@ -5,19 +5,19 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!-- Step:  Add a title, in this case, call it "Adding CSS" -->
+    <!-- Step 2.10:  Add a title, in this case, call it "Adding CSS" -->
     <title>Adding CSS</title>
 
-    <!-- Step: Add an css section to the this file -->
+    <!-- Step 2.20: Add an css section to the this file -->
     <!-- NOTE: Typically, CSS files are not in the same file as html, but in an external file. -->
     <style>
-        /* Step: Add a body tag, and give it the color "powderblue"*/
+        /* Step 2.30: Add a body tag, and give it the color "powderblue"*/
         body {
             background-color: powderblue;
         }
-        /* Step: Make the table heading blue */
-        /* Step: Make the font large */
-        /* Step: Add padding, .... */
+        /* Step 2.40: Make the table heading blue */
+        /* Step 2.41: Make the font large */
+        /* Step 2.42: Add padding, .... */
 
         th {
             color: blue;
@@ -40,11 +40,11 @@
             <th>title</th>
             <th>thumb</th>
         </tr>
-        <!-- Step:  Make the middle row have a background of aqua, using inline styles -->
-        <!-- Step:  Use the class attribute, call it lastLine, make it red -->
         <tr>
-            <td>1</td>
-            <td style="background-color:aqua">2</td>
+            <td>1</td>            
+            <!-- Step 2.50:  Make the middle row have a background of aqua, using inline styles -->
+            <td style="background-color:aqua">2</td>            
+            <!-- Step 2.51:  Use the class attribute, call it lastLine, make it red -->
             <td class="lastLine">3</td>
         </tr>
         <tr>
