--- a/SampleProject/SampleSolution/Website/Steps/AddHtmlElements.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddHtmlElements.html
@@ -3,21 +3,21 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!-- Step:  Add a title, in this case, call it "Adding HTML" -->
+    <!-- Step 1.10:  Add a title, in this case, call it "Adding HTML" -->
     <title>Adding HTML</title>
 </head>
 <body>
-    <!-- Step:  Add a text area, give it the id of "searchText" -->
+    <!-- Step 1.20:  Add a text area, give it the id of "searchText" -->
     <input id="searchText" type="text" width="900" value="" />
 
-    <!-- Step:  Add a table, with table headers of "date", "title", "thumb" -->
+    <!-- Step 1.30:  Add a table, with table headers of "date", "title", "thumb" -->
     <table border="1" id="resultsTable">
         <tr>
             <th>date</th>
             <th>title</th>
             <th>thumb</th>
         </tr>
-        <!-- Step:  Add a sample data to the table -->
+        <!-- Step 1.40:  Add a sample data to the table -->
         <tr>
             <td>1</td>
             <td>2</td>
