--- a/SampleProject/SampleSolution/Website/Steps/AddJQuery.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddJQuery.html
@@ -4,10 +4,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!-- Step: Add a script reference to "https://code.jquery.com/jquery-3.2.0.min.js" -->
+    <!-- Step 4.10: Add a script reference to "https://code.jquery.com/jquery-3.2.0.min.js" -->
     <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
 
-    <!-- Step:  Add a title, in this case, call it "Adding JQuery" -->
+    <!-- Step 4.20:  Add a title, in this case, call it "Adding JQuery" -->
     <title>Adding JQuery</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <br /><button onclick="testRemote()">Search Remote</button>
 
 
-    <!-- Step: Give the table the id  "resultsTable" -->
+    <!-- Step 4.30: Give the table the id  "resultsTable" -->
     <table border="1" id="resultsTable">
         <tr>
             <th>date</th>
@@ -93,31 +93,31 @@
     </script>
 
     <script>
-        /* Step: create a function called addRowToTable, that takes an argument of one item from the results list, and adds a row to the table */
+        /* Step 4.40: create a function called addRowToTable, that takes an argument of one item from the results list, and adds a row to the table */
         /* Step: using the selector resultsTable, add a 'tr' element, with 'td' elements inside of it */
         function addRowToTable(item) {
             var row = $("<tr />")
             $("#resultsTable").append(row); //this will append tr element to table... keep its reference for a while since we will add cels into it
-            /* Step: add */
+            /* Step 4.50: add */
             row.append($("<td>" + item.created_published_date + "</td>"));
-            /* Step: Add a link that ties to the links.item, and has the title of item.title. */
+            /* Step 4.60: Add a link that ties to the links.item, and has the title of item.title. */
             row.append($("<td>" + "<a target='_blank' href='" + item.links.item + "'>" + item.title + "</a>" + "</td>"));
-            /* Step: Add another link, that ties to the  links.resource, and has the an image displayed.  Uses the image.square object. */
+            /* Step 4.70: Add another link, that ties to the  links.resource, and has the an image displayed.  Uses the image.square object. */
             row.append($("<td>" + "<a target='_blank' href='" + item.links.resource + "'>" + '<img src="' + item.image.square + '" />' + "</a>" + "</td>"));
         }
 
-        /* Step: Create a function loadData that takes 'data' as the input.  This will iterate through all the results data, and add rows to the table. */
+        /* Step 4.80: Create a function loadData that takes 'data' as the input.  This will iterate through all the results data, and add rows to the table. */
         function loadData(data) {
-            /* Step: Using JQuery, clear out all the tr tags.  [[this may be a bit advanced]]*/
+            /* Step 4.90: Using JQuery, clear out all the tr tags.  [[this may be a bit advanced]]*/
             $("#resultsTable tr:gt(0)").remove();
-            /* Step: iterate through all the items in the results list, and call addRowToTable for each item.  This will basically add one row of data at a time to the table.*/
+            /* Step 4.100: iterate through all the items in the results list, and call addRowToTable for each item.  This will basically add one row of data at a time to the table.*/
             var list = data.results;
             for (var i = 0; i < list.length; i++) {
                 var item = list[i];
                 addRowToTable(item);
             }
         }
-        /* Step: Load the sample data*/
+        /* Step 4.110: Load the sample data*/
         loadData(sampleData);
     </script>
 </body>
