--- a/SampleProject/SampleSolution/Website/Steps/UseEntityEndpoint.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseEntityEndpoint.html
@@ -4,13 +4,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-    <!-- Step:  Add a title, in this case, call it "Uses Entity" -->
+    <!-- Step 8.10:  Add a title, in this case, call it "Uses Entity" -->
     <title>Uses Entity</title>
 </head>
 <body>
 
     <input id="searchText" type="text" size="100" value="lam" />
-    <!-- Step: tie into the onclick event, and call the function "loadDatabaseUsingEntity" -->
+    <!-- Step 8.20: tie into the onclick event, and call the function "loadDatabaseUsingEntity" -->
     <br /><button onclick="loadDatabaseUsingEntity()">Search Database</button>
 
     <table border="1" id="resultsTable">
@@ -39,12 +39,12 @@
                 addRowToTable(item);
             }
         }
-        // Step: Call the loadDatabaseUsingEntity function (in order to initialize when the page loads)  */
+        // Step 8.30: Call the loadDatabaseUsingEntity function (in order to initialize when the page loads)  */
         loadDatabaseUsingEntity();
 
         function loadDatabaseUsingEntity() {
             var search = $("#searchText").val();
-            /*  Step: Using JQuery ajax, call the url  'http://localhost:29594/api/LOCEntity/' */
+            /*  Step 8.40: Using JQuery ajax, call the url  'http://localhost:29594/api/LOCEntity/' */
             $.ajax({
                 type: 'get',
                 url: 'http://localhost:29594/api/LOCEntity/',
