--- a/SampleProject/SampleSolution/Website/Steps/UseLOC.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseLOC.html
@@ -6,15 +6,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
-    <!-- Step:  Add a title, in this case, call it "Library of Congress" -->
+    <!-- Step 5.10:  Add a title, in this case, call it "Library of Congress" -->
     <title>Library of Congress</title>
 </head>
 <body>
 
-    <!-- Step:  Give the input box a default value of "Migrant Mother. Dorothea Lange" -->
+    <!-- Step 5.20:  Give the input box a default value of "Migrant Mother. Dorothea Lange" -->
     <input id="searchText" type="text" size="100" value="Migrant Mother. Dorothea Lange" />
     <br />(Also Try "Detroit Campus Martius")
-    <!-- Step: tie into the onclick event, and call the function "loadRemoteLOC" -->
+    <!-- Step 5.30: tie into the onclick event, and call the function "loadRemoteLOC" -->
     <br /><button onclick="loadRemoteLOC()">Search Remote</button>
 
     <table border="1" id="resultsTable">
@@ -43,18 +43,18 @@
                 addRowToTable(item);
             }
         }
-        /* Step: Call the loadRemoteLOC function (in order to initialize when the page loads)  */
+        /* Step 5.40: Call the loadRemoteLOC function (in order to initialize when the page loads)  */
         loadRemoteLOC();
 
-        /* Step: Define the loadRemoteLOC function that will pass the search information to an ajax call.  Upon returning, the loadData will be called with the returned data. */
+        /* Step 5.50: Define the loadRemoteLOC function that will pass the search information to an ajax call.  Upon returning, the loadData will be called with the returned data. */
         function loadRemoteLOC() {
-            /*  Step: Using JQuery get the value in the search box */
+            /*  Step 5.51: Using JQuery get the value in the search box */
             var search = $("#searchText").val();
-            /*  Step: Using JQuery ajax, call the url 'http://www.loc.gov/pictures/search/' */
+            /*  Step 5.60: Using JQuery ajax, call the url 'http://www.loc.gov/pictures/search/' */
             /*  Step: Pass the following in the data element:
                  { fo: 'json', at: 'results', query: search }
             */
-            /* Step: in order for this to work, you will need to update the controller file: LOCController.cs */
+            /* Step 5.61: in order for this to work, you will need to update the controller file: LOCController.cs */
             $.ajax({
                 type: 'get',
                 url: 'http://www.loc.gov/pictures/search/',
@@ -64,7 +64,7 @@
                     at: 'results',
                     query: search
                 },
-                /*  Step: add a 'success' function that gets passed in the response data, then calls loadData with the value */
+                /*  Step 5.62: add a 'success' function that gets passed in the response data, then calls loadData with the value */
                 success: function (response) {
                     loadData(response);
                 },
