Minor update to add the size to the search box.

--- a/SampleProject/SampleSolution/Website/Steps/AddCss.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddCss.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <input id="searchText" type="text" width="900" value="" />
+    <input id="searchText" type="text" size="100" value="" />
 
     <table border="1" id="resultsTable">
         <tr>
