--- a/SampleProject/SampleSolution/Website/Steps/AddHtmlElements.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddHtmlElements.html
@@ -7,7 +7,7 @@
     <title>Adding HTML</title>
 </head>
 <body>
-    <!-- Step 1.20:  Add a text area, give it the id of "searchText" -->
+    <!-- Step 1.20:  Add a text area, give it the id of "searchText", and a size of 100 -->
     <input id="searchText" type="text" width="900" value="" />
 
     <!-- Step 1.30:  Add a table, with table headers of "date", "title", "thumb" -->
