Update to have them add basic html, head, body tags.

--- a/SampleProject/SampleSolution/Website/Steps/AddHtmlElements.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddHtmlElements.html
@@ -1,5 +1,5 @@
 ﻿<!-- Overview: A basic web page -->
-<!-- Step:  html, head, body elements -->
+<!-- Step 1.00:  html, head, body elements -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
