Update html files, comments related to steps.

--- a/SampleProject/SampleSolution/Website/Steps/AddJQuery.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddJQuery.html
@@ -13,6 +13,7 @@
 <body>
 
     <input id="searchText" type="text" size="100" value="-not used-" />
+    <!-- Step 4.25: Have the buttons' onclick event call "testRemote" -->
     <br /><button onclick="testRemote()">Search Remote</button>
 
 
