--- a/SampleProject/SampleSolution/Website/Steps/AddJavascript.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddJavascript.html
@@ -90,6 +90,9 @@
         // Step 3.30: Display the title of the 2nd items title (index is 1).
         alert("JSON first object info = " + sampleData.results[1].title);
 
+        //QLNOTE:  We may want to cover this (Using JSON.stringify(OBJECT, null, "  ")) in a prior assignment.  
+        // Earlier on mention something like:  JSON.stringify(OBJECT, null, "  ") is used to dump out objects in a readable form.  ...
+
         // Step 3.40: Using JSON.stringify(OBJECT, null, "  "), dump out the  3rd JSON object . 
         alert("full Object" + JSON.stringify(sampleData.results[2], null, "  "));
     </script>
