--- a/SampleProject/SampleSolution/Website/Steps/UseAdventureWorksDatabase.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseAdventureWorksDatabase.html
@@ -5,13 +5,13 @@
 <head>
     <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
     <!-- Step 9.10:  Add a title, in this case, call it "Uses AdventureWorks" -->
-   <title>Uses AdventureWorks</title>
+    <title>Uses AdventureWorks</title>
 </head>
 <body>
     <!-- Step 9.20:  Default value of "Road" -->
     <input id="searchText" type="text" size="100" value="Road" />
     <!-- Step 9.30: tie into the onclick event, and call the function "loadAWDatabaseUsingEntity" -->
-   <br /><button onclick="loadAWDatabaseUsingEntity()">Search Database</button>
+    <br /><button onclick="loadAWDatabaseUsingEntity()">Search Database</button>
 
     <table border="1" id="resultsTable">
         <tr>
@@ -44,8 +44,9 @@
 
         function loadAWDatabaseUsingEntity() {
             var search = $("#searchText").val();
-             /*  Step: Using JQuery ajax, call the url  'http://localhost:29594/api/AWEntity/' */
-           $.ajax({
+            /* Step 9.50: Using JQuery ajax, call the url  'http://localhost:29594/api/AWEntity/' */
+            /* Step 9.51: In order for this to work, you will need to update the controller file: AWEntityController.cs */
+            $.ajax({
                 type: 'get',
                 url: 'http://localhost:29594/api/AWEntity/',
                 dataType: 'json',
