--- a/SampleProject/SampleSolution/Website/Steps/UseAdventureWorksDatabase.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseAdventureWorksDatabase.html
@@ -10,8 +10,8 @@
 <body>
     <!-- Step 9.20:  Default value of "Road" -->
     <input id="searchText" type="text" size="100" value="Road" />
-    <!-- Step 9.30: tie into the onclick event, and call the function "loadAWDatabaseUsingEntity" -->
-    <br /><button onclick="loadAWDatabaseUsingEntity()">Search Database</button>
+    <!-- Step 9.30: tie into the onclick event, and call the function "loadRemoteData" -->
+    <br /><button onclick="loadRemoteData()">Search Database</button>
 
     <table border="1" id="resultsTable">
         <tr>
@@ -39,10 +39,10 @@
                 addRowToTable(item);
             }
         }
-        // Step 9.40: Call the loadAWDatabaseUsingEntity function (in order to initialize when the page loads)
-        loadAWDatabaseUsingEntity();
+        // Step 9.40: Call the loadRemoteData function (in order to initialize when the page loads)
+        loadRemoteData();
 
-        function loadAWDatabaseUsingEntity() {
+        function loadRemoteData() {
             var search = $("#searchText").val();
             /* Step 9.50: Using JQuery ajax, call the url  'http://localhost:29594/api/AWEntity/' */
             /* Step 9.51: In order for this to work, you will need to update the controller file: AWEntityController.cs */
