--- a/SampleProject/SampleSolution/Website/Steps/UseCustomDatabase.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseCustomDatabase.html
@@ -11,8 +11,8 @@
 
     <!-- Step 7.20: Default value = "lam" -->
     <input id="searchText" type="text" size="100" value="lam" />
-    <!-- Step 7.30: tie into the onclick event, and call the function "loadDatabaseData" -->
-    <br /><button onclick="loadDatabaseData()">Search Database</button>
+    <!-- Step 7.30: tie into the onclick event, and call the function "loadRemoteData" -->
+    <br /><button onclick="loadRemoteData()">Search Database</button>
 
     <table border="1" id="resultsTable">
         <tr>
@@ -40,9 +40,9 @@
             }
         }
         // Step 7.40: Call the loadDatabaseData function (in order to initialize when the page loads)
-        loadDatabaseData();
+        loadRemoteData();
 
-        function loadDatabaseData() {
+        function loadRemoteData() {
             var search = $("#searchText").val();
             /* Step 7.50: Using JQuery ajax, call the url  'http://localhost:29594/api/locdb/' */
             /* Step 7.51: In order for this to work, you will need to update the controller file: LOCDBController.cs */
