--- a/SampleProject/SampleSolution/Website/Steps/UseEntityEndpoint.html
+++ b/SampleProject/SampleSolution/Website/Steps/UseEntityEndpoint.html
@@ -10,8 +10,8 @@
 <body>
 
     <input id="searchText" type="text" size="100" value="lam" />
-    <!-- Step 8.20: tie into the onclick event, and call the function "loadDatabaseUsingEntity" -->
-    <br /><button onclick="loadDatabaseUsingEntity()">Search Database</button>
+    <!-- Step 8.20: tie into the onclick event, and call the function "loadRemoteData" -->
+    <br /><button onclick="loadRemoteData()">Search Database</button>
 
     <table border="1" id="resultsTable">
         <tr>
@@ -39,10 +39,10 @@
                 addRowToTable(item);
             }
         }
-        // Step 8.30: Call the loadDatabaseUsingEntity function (in order to initialize when the page loads)  */
-        loadDatabaseUsingEntity();
+        // Step 8.30: Call the loadRemoteData function (in order to initialize when the page loads)  */
+        loadRemoteData();
 
-        function loadDatabaseUsingEntity() {
+        function loadRemoteData() {
             var search = $("#searchText").val();
             /* Step 8.50: Using JQuery ajax, call the url  'http://localhost:29594/api/LOCEntity/' */
             /* Step 8.51: In order for this to work, you will need to update the controller file: LOCEntityController.cs */
