--- a/SampleProject/SampleSolution/Website/Default.html
+++ b/SampleProject/SampleSolution/Website/Default.html
@@ -5,14 +5,14 @@
 </head>
 <body>
     <p>This contains steps for the sample project</p>
-    <br /><a target='_blank' href='Steps/AddHtmlElements.html'>Add HTML Elements</a>
-    <br /><a target='_blank' href='Steps/AddCss.html'>Add CSS</a>
-    <br /><a target='_blank' href='Steps/AddJavascript.html'>Add Javascript</a>
-    <br /><a target='_blank' href='Steps/AddJQuery.html'>Add JQuery</a>
-    <br /><a target='_blank' href='Steps/UseLOC.html'>Use Library Of Congress Endpoint (LOC api)</a>
-    <br /><a target='_blank' href='Steps/UseSimpleEndpoint.html'>Create and use a custom simple Endpoint (LOCController.cs)</a>
-    <br /><a target='_blank' href='Steps/UseCustomDatabase.html'>Tie custom endpoint to database  (LOCDBController.cs)</a>
-    <br /><a target='_blank' href='Steps/UseEntityEndpoint.html'>Use Entity Framework (LOCEntityController.cs)</a>
-    <br /><a target='_blank' href='Steps/UseAdventureWorksDatabase.html'>Use AdventureWorks Database (AWEntityController.cs)</a>
+    <br />Step 1: <a target='_blank' href='Steps/AddHtmlElements.html'>Add HTML Elements</a>
+    <br />Step 2: <a target='_blank' href='Steps/AddCss.html'>Add CSS</a>
+    <br />Step 3: <a target='_blank' href='Steps/AddJavascript.html'>Add Javascript</a>
+    <br />Step 4: <a target='_blank' href='Steps/AddJQuery.html'>Add JQuery</a>
+    <br />Step 5: <a target='_blank' href='Steps/UseLOC.html'>Use Library Of Congress Endpoint (LOC api)</a>
+    <br />Step 6: <a target='_blank' href='Steps/UseSimpleEndpoint.html'>Create and use a custom simple Endpoint (LOCController.cs)</a>
+    <br />Step 7: <a target='_blank' href='Steps/UseCustomDatabase.html'>Tie custom endpoint to database  (LOCDBController.cs)</a>
+    <br />Step 8: <a target='_blank' href='Steps/UseEntityEndpoint.html'>Use Entity Framework (LOCEntityController.cs)</a>
+    <br />Step 9: <a target='_blank' href='Steps/UseAdventureWorksDatabase.html'>Use AdventureWorks Database (AWEntityController.cs)</a>
 </body>
 </html>
