Improve comments to sample project. Remove unused code. Remove unused files.

--- a/SampleProject/SampleSolution/Website/Default.html
+++ b/SampleProject/SampleSolution/Website/Default.html
@@ -1,8 +1,9 @@
-﻿
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <title>Sample Project</title>
 </head>
+
 <body>
     <p>This contains steps for the sample project</p>
     <br />Step 1: <a target='_blank' href='Steps/AddHtmlElements.html'>Add HTML Elements</a>
@@ -15,4 +16,5 @@
     <br />Step 8: <a target='_blank' href='Steps/UseEntityEndpoint.html'>Use Entity Framework (LOCEntityController.cs)</a>
     <br />Step 9: <a target='_blank' href='Steps/UseAdventureWorksDatabase.html'>Use AdventureWorks Database (AWEntityController.cs)</a>
 </body>
+
 </html>
