--- a/SampleProject/SampleSolution/Website/Steps/AddCss.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddCss.html
@@ -42,7 +42,7 @@
         </tr>
         <tr>
             <td>1</td>            
-            <!-- Step 2.50:  Make the middle row have a background of aqua, using inline styles -->
+            <!-- Step 2.50:  Make the middle columns have a background of aqua, using inline styles -->
             <td style="background-color:aqua">2</td>            
             <!-- Step 2.51:  Use the class attribute, call it lastLine, make it red -->
             <td class="lastLine">3</td>
