--- a/SampleProject/SampleSolution/Website/Steps/AddJQuery.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddJQuery.html
@@ -95,22 +95,21 @@
 
     <script>
         /* Step 4.40: create a function called addRowToTable, that takes an argument of one item from the results list, and adds a row to the table */
-        /* Step: using the selector resultsTable, add a 'tr' element, with 'td' elements inside of it */
         function addRowToTable(item) {
             var row = $("<tr />")
-            $("#resultsTable").append(row); //this will append tr element to table... keep its reference for a while since we will add cels into it
-            /* Step 4.50: add */
+            /* Step 4.50: add items to the table row, add item.created_published_date*/
             row.append($("<td>" + item.created_published_date + "</td>"));
             /* Step 4.60: Add a link that ties to the links.item, and has the title of item.title. */
             row.append($("<td>" + "<a target='_blank' href='" + item.links.item + "'>" + item.title + "</a>" + "</td>"));
             /* Step 4.70: Add another link, that ties to the  links.resource, and has the an image displayed.  Uses the image.square object. */
             row.append($("<td>" + "<a target='_blank' href='" + item.links.resource + "'>" + '<img src="' + item.image.square + '" />' + "</a>" + "</td>"));
+            /* Step 4.75: append this row, to the selector resultsTable  */
+            $("#resultsTable").append(row); //this will append tr element to table... keep its reference for a while since we will add cels into it
         }
 
-        /* Step 4.80: Create a function loadData that takes 'data' as the input.  This will iterate through all the results data, and add rows to the table. */
+        /* Step 4.80: Create a function loadData that takes 'data' as the input.  (This will iterate through all the results data, and add rows to the table.) */
         function loadData(data) {
-            /* Step 4.90: Using JQuery, clear out all the tr tags.  [[this may be a bit advanced]]*/
-            $("#resultsTable tr:gt(0)").remove();
+            $("#resultsTable tr:gt(0)").remove();  // This will use the #resultsTable, then the 'tr' tag, and remove all rows greater than 1 
             /* Step 4.100: iterate through all the items in the results list, and call addRowToTable for each item.  This will basically add one row of data at a time to the table.*/
             var list = data.results;
             for (var i = 0; i < list.length; i++) {
