--- a/SampleProject/SampleSolution/Website/Steps/AddJavascript.html
+++ b/SampleProject/SampleSolution/Website/Steps/AddJavascript.html
@@ -12,7 +12,6 @@
 <body>
 
     <!-- NOTE: Typically, Javascript files are not in the same file as html, but in an external file. -->
-    <!-- Step:  Add the 'sampleData' JSON code snippet to a script tag. -->
     <script>
         /* NOTE: This defines a JSON object that we will use later on. */
         var sampleData = {
@@ -84,14 +83,11 @@
         // Step 3.10:  Call an alert function, and pass it "Hello World!".
         alert("Hello World!");
 
-        // Step 3.20: Display the count of the results subobject.
+        // Step 3.20: Display the count of the results subobject of sampleData.
         alert("JSON Object Count = " + sampleData.results.length);
 
-        // Step 3.30: Display the title of the 2nd items title (index is 1).
+        // Step 3.30: Display the title of the 2nd items title (index is 1) of sampleData.
         alert("JSON first object info = " + sampleData.results[1].title);
-
-        //QLNOTE:  We may want to cover this (Using JSON.stringify(OBJECT, null, "  ")) in a prior assignment.  
-        // Earlier on mention something like:  JSON.stringify(OBJECT, null, "  ") is used to dump out objects in a readable form.  ...
 
         // Step 3.40: Using JSON.stringify(OBJECT, null, "  "), dump out the  3rd JSON object . 
         alert("full Object" + JSON.stringify(sampleData.results[2], null, "  "));
